feat: expand game lifecycle and arena systems